<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="12dp"
        android:text="@string/My_Nanodegree_Apps"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button1"
        style="@style/buttonStyle"
        android:layout_below="@+id/textView"
        android:layout_marginTop="24dp"
        android:onClick="button1On"
        android:text="@string/popular_movies"
        />

    <Button
        android:id="@+id/button2"
        style="@style/buttonStyle"
        android:layout_below="@+id/button1"
        android:onClick="button2On"
        android:text="@string/stock_hawk"
        />

    <Button
        android:id="@+id/button3"
        style="@style/buttonStyle"
        android:layout_below="@+id/button2"
        android:onClick="button3On"
        android:text="@string/build_it_bigger"
        />

    <Button
        android:id="@+id/button4"
        style="@style/buttonStyle"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="button4On"
        android:text="@string/make_your_app_material"
        />

    <Button
        android:id="@+id/button5"
        style="@style/buttonStyle"
        android:layout_below="@+id/button4"
        android:onClick="button5On"
        android:text="@string/go_ubiquitous"
        />

    <Button
        android:id="@+id/button6"
        style="@style/buttonStyle"
        android:layout_below="@+id/button5"
        android:onClick="button6On"
        android:text="@string/capstone"
        />
</RelativeLayout>
